fix profile width issue on mobile

--- a/client/src/pages/Profile/Profile.css
+++ b/client/src/pages/Profile/Profile.css
@@ -142,4 +142,7 @@ p {
   .user-test {
     display: none;
   }
+  .personal-info {
+    width: 90%;
+  }
 }
